# hello_rust_multithread

./: Cargo.toml  Dockerfile
src/: main.rs  passthrough.rs
tmp/: test.txt
