[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"
fuse_mt = "0.6.0"
fernet = "0.2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }